# clipforge

./: .gitignore  ARCHITECTURE.md  README.md  THINGS_TO_FIX.md  epic1.md  epic2_brief.md  epic3_brief.md  logo_idea.md  package-lock.json  package.json  setup_epic.md  setup_tasks.md
planning/: BUNDLE_FFMPEG.md  DEV_WORKFLOW.md  EPIC1_TASKS.md  EPIC2_TASKS.md  EPIC3_TASKS.md  architecture.md  epic2_brief.md  epic7_recording_status.md  mvp.md  prd.md  project_context.md
src/: App.css  App.tsx  ExportDialog.css  ExportDialog.tsx  MediaPanel.css  MediaPanel.tsx  Playhead.tsx  PreviewPlayer.css  PreviewPlayer.tsx  RecordingPanel.css  RecordingPanel.tsx  Timeline.css  Timeline.tsx  TimelineClip.tsx  assetHelper.ts  timelineOperations.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: export.rs  files.rs  media.rs  mod.rs  recording.rs
src-tauri/src/ffmpeg/: mod.rs  parsers.rs  paths.rs
